--- a/src-api/src/main/resources/application.properties
+++ b/src-api/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
