--- a/src-frontend/package.json
+++ b/src-frontend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.4",
     "redux": "^5.0.1",
+    "serve": "^14.2.3",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
