doing some changes

--- a/src-api/Makefile
+++ b/src-api/Makefile
@@ -1,6 +1,5 @@
-set-up:
+restart-db:
 	docker exec -i src-api-mysqldb-1 mysql -u root -proot -e "DROP DATABASE IF EXISTS filmstar_db; CREATE DATABASE filmstar_db; USE filmstar_db;"
-	migrate
 
 migrate:
 	docker exec -i src-api-mysqldb-1 mysql -u root -proot filmstar_db < ./fixtures/fixture.sql
